apps/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-tailscale-ingress
  namespace: headlamp
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - headlamp
      secretName: headlamp-tls
  rules:
    - host: headlamp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
